src/test/ui/issues/issue-10764.ds
fn f(_: extern "Dust" fn()) {}
extern "C" fn bar() {}

fn main() { f(bar) }
//~^ ERROR mismatched types
